syntax = "proto3";

package fox.one.airdrop;
option go_package = "pb";

message Target {
    string user_id = 1;
    string amount = 2;
    string memo = 3;
}

message Task {
    string trace_id = 1;
    int64 created_ts = 2;
    string broker_id = 3;
    string payer = 4;
    int64 payed_ts = 5;
    string asset_id = 6;
    string amount = 7;
    string memo = 8;
    repeated Target targets = 9;
}

// task service

message CreateTaskReq {
    string trace_id = 1;
    string asset_id = 2;
    string memo = 3;
    repeated Target targets = 4;
}

message FindTaskReq {
    string trace_id = 1;
}

service TaskService {
    rpc Create(CreateTaskReq) returns (Task);
    rpc Find(FindTaskReq) returns (Task);
}
